--- a/src/test/resources/serenity.conf
+++ b/src/test/resources/serenity.conf
@@ -9,7 +9,7 @@ serenity {
     report.accessibility = true
 }
 
-headless.mode = false
+headless.mode = true
 
 chrome {
     switches = "--incognito;--password-store=basic;--single-process;--disable-backgrounding-occluded-windows;--remote-allow-origins=*;--disable-web-security;--disable-browser-side-navigation;--disable-gpu;--ignore-certificate-errors;--disable-download-notification;--disable-dev-shm-usage;--disable-notifications;--disable-site-isolation-trials"
@@ -21,6 +21,7 @@ chrome {
 # Fix error "Response code 500. Message: session not created: This version of ChromeDriver only supports Chrome version 114"
 # tai link: https://stackoverflow.com/a/77682935/16445140 , them doan code vao @Before
 webdriver {
+    autodownload = true
     driver = chrome
     wait.for.timeout = 21000
     timeouts {
