add gitignore and fix chromedriver

--- a/src/test/resources/serenity.conf
+++ b/src/test/resources/serenity.conf
@@ -12,7 +12,7 @@ serenity {
 headless.mode = true
 
 chrome {
-    switches = "--incognito;--password-store=basic;--single-process;--disable-backgrounding-occluded-windows;--remote-allow-origins=*;--disable-web-security;--disable-browser-side-navigation;--disable-gpu;--ignore-certificate-errors;--disable-download-notification;--disable-dev-shm-usage;--disable-notifications;--disable-site-isolation-trials"
+    switches = "--no-sandbox;--incognito;--password-store=basic;--single-process;--disable-backgrounding-occluded-windows;--remote-allow-origins=*;--disable-web-security;--disable-browser-side-navigation;--disable-gpu;--ignore-certificate-errors;--disable-download-notification;--disable-dev-shm-usage;--disable-notifications;--disable-site-isolation-trials"
     capabilities {
         applicationCacheEnabled = false
     }
